--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Main Page</title>
     <!-- boxicon uses as a font -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../javascript/index.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="javascript/index.js"></script>
 </head>
 <body>
     <!-- make header -->
@@ -41,18 +41,18 @@
                 <a href="https://github.com/sachinkumar854881"><i class='bx bxl-github'></i></a>
             </div>
             <!-- download button -->
-            <a href="../images/SacResume.pdf" class="btn">Download Resume </a>
+            <a href="./images/SacResume.pdf" class="btn">Download Resume </a>
             <a href="#" class="btn">Hire Me!</a>
         </div>
         <!-- image -->
         <div class="home-img">
-            <img src="../images/homeph.png" alt="">
+            <img src="./images/homeph.png" alt="">
         </div>
     </section>
     <!-- make about us section-->
     <section class="about" id="aboutus"> <!--this id aboutus, link a nav aboutus link-->
         <div class="about-img">
-            <img src="../images/aboutph.png" alt="">
+            <img src="./images/aboutph.png" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
@@ -164,7 +164,7 @@
             <h2 class="heading">Latest<span> Projects</span></h2>
             <div class="Projects-container">
                 <div class="Projects-box">
-                    <img src="../images/portfolio1.jpg"alt="">
+                    <img src="./images/portfolio1.jpg"alt="">
                     <div class="Projects-layer">
                         <h4>Responsive Portfolio</h4>
                         <p>Making a Responsive Portfolio using verious Technologis like-Html, Css and Javascript. A portfolio is a collection of your best work samples that can illustrate your skills and expertise in a particular domain.</p>
@@ -173,7 +173,7 @@
                 </div>
 
                 <div class="Projects-box">
-                    <img src="../images/portfolio2.jpg" alt="">
+                    <img src="./images/portfolio2.jpg" alt="">
                     <div class="Projects-layer">
                         <h4>Shopping Website</h4>
                         <p>Making a Shopping Website using verious Technologis like-Html, Css and Javascript. A portfolio is a collection of your best work samples that can illustrate your skills and expertise in a particular domain.</p>                      <a href="#"><i class='bx bx-link-external'></i></a>                
@@ -207,7 +207,7 @@
         </footer>
         <!-- make Scroll reveal -->
         <script src="https://unpkg.com/scrollreveal"></script>
-        <script src="../javascript/index.js"></script>
+        <script src="javascript/index.js"></script>
         <!-- typed js cdn -->
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         <script>
