update in image src

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
                 <a href="https://github.com/sachinkumar854881"><i class='bx bxl-github'></i></a>
             </div>
             <!-- download button -->
-            <a href="./images/SacResume.pdf" class="btn">Download Resume </a>
+            <a href="images/SacResume.pdf" class="btn">Download Resume </a>
             <a href="#" class="btn">Hire Me!</a>
         </div>
         <!-- image -->
         <div class="home-img">
-            <img src="/images/homeph.png" alt="">
+            <img src="images/homeph.png" alt="">
         </div>
     </section>
     <!-- make about us section-->
     <section class="about" id="aboutus"> <!--this id aboutus, link a nav aboutus link-->
         <div class="about-img">
-            <img src="/images/aboutph.png" alt="">
+            <img src="images/aboutph.png" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
