--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         </div>
         <!-- image -->
         <div class="home-img">
-            <img src="images/homeph.png" alt="">
+            <img src="/images/homeph.PNG" alt="">
         </div>
     </section>
     <!-- make about us section-->
     <section class="about" id="aboutus"> <!--this id aboutus, link a nav aboutus link-->
         <div class="about-img">
-            <img src="images/aboutph.png" alt="">
+            <img src="/images/aboutph.PNG" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
