update all files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- boxicon uses as a font -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
-    <script src="./javascript/index.js"></script>
+    <script src="javascript/index.js"></script>
 </head>
 <body>
     <!-- make header -->
@@ -46,13 +46,13 @@
         </div>
         <!-- image -->
         <div class="home-img">
-            <img src="images/homeph.jpg" alt="">
+            <img src="images/homeph.png" alt="">
         </div>
     </section>
     <!-- make about us section-->
     <section class="about" id="aboutus"> <!--this id aboutus, link a nav aboutus link-->
         <div class="about-img">
-            <img src="images/aboutph.jpg" alt="">
+            <img src="images/aboutph.png" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
@@ -176,7 +176,8 @@
                     <img src="images/portfolio2.jpg" alt="">
                     <div class="Projects-layer">
                         <h4>Shopping Website</h4>
-                        <p>Making a Shopping Website using verious Technologis like-Html, Css and Javascript. A portfolio is a collection of your best work samples that can illustrate your skills and expertise in a particular domain.</p>                      <a href="#"><i class='bx bx-link-external'></i></a>                
+                        <p>Making a Shopping Website using verious Technologis like-Html, Css and Javascript. A portfolio is a collection of your best work samples that can illustrate your skills and expertise in a particular domain.</p>                    
+                        <a href="https://sachinkumar854881.github.io/AthleteShop/"><i class='bx bx-link-external'></i></a>                
                     </div>
                 </div>
             </div>
