--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="https://github.com/sachinkumar854881"><i class='bx bxl-github'></i></a>
             </div>
             <!-- download button -->
-            <a href="images/SacResume.pdf" class="btn">Download Resume </a>
+            <a href="images/Sachin Frontend.pdf" class="btn">Download Resume </a>
             <a href="#" class="btn">Hire Me!</a>
         </div>
         <!-- image -->
