--- a/index.html
+++ b/index.html
@@ -176,8 +176,17 @@
                     <img src="images/portfolio2.jpg" alt="">
                     <div class="Projects-layer">
                         <h4>Shopping Website</h4>
-                        <p>Making a Shopping Website using verious Technologis like-Html, Css and Javascript. A portfolio is a collection of your best work samples that can illustrate your skills and expertise in a particular domain.</p>                    
+                        <p>Making a Shopping Website using verious Technologis like-Html, Css and Javascript. A Website is a collection of your best work samples that can illustrate your skills and expertise in a particular domain.</p>                    
                         <a href="https://sachinkumar854881.github.io/AthleteShop/"><i class='bx bx-link-external'></i></a>                
+                    </div>
+                </div>
+
+                <div class="Projects-box">
+                    <img src="images/portfolio3.jpg" alt="">
+                    <div class="Projects-layer">
+                        <h4>GuessNumber Game</h4>
+                        <p>Making a Guessing number Game using verious Technologis like-Html, Css and Javascript. A project is a collection of your best work samples that can illustrate your skills and expertise in a particular domain.</p>                    
+                        <a href="https://sachinkumar854881.github.io/Guessing-Number-Game/"><i class='bx bx-link-external'></i></a>                
                     </div>
                 </div>
             </div>
